--- a/styles/topcoder-workflow.less
+++ b/styles/topcoder-workflow.less
@@ -1,17 +1,26 @@
 #topcoder-workflow {
-  overflow: scroll;
-  background: white;
-  color: black;
-}
-
-#topcoder-workflow a {
-  color: #1155cc;
+  overflow: auto;
+  padding:20px;
+  //background: white;
+  //color: black;
 }
 
 #topcoder-workflow table {
-  border-color: grey;
-  border-top-color: grey;
-  border-right-color: grey;
-  border-bottom-color: grey;
-  border-left-color: grey;
+  margin: 10px 0;
 }
+
+#topcoder-workflow table td, th {
+  padding:5px;
+}
+
+// #topcoder-workflow a {
+//   color: #1155cc;
+// }
+
+// #topcoder-workflow table {
+//   border-color: grey;
+//   border-top-color: grey;
+//   border-right-color: grey;
+//   border-bottom-color: grey;
+//   border-left-color: grey;
+// }
